layout changes and content added

--- a/awake.html
+++ b/awake.html
@@ -25,9 +25,9 @@
             <div id="spacer_span">spacer span</div>           
             <div id="ui" class="flex-container">
                 <div class="flexinner">
-                    <div id="innerv1" class="innervoice">Inner Voice 1</div>
-                    <div id="innerv2" class="innervoice">Inner Voice 2</div>
-                    <div id="innerv3" class="innervoice">Inner Voice 3</div>
+                    <div id="innerv1" class="innervoice"></div>
+                    <div id="innerv2" class="innervoice"></div>
+                    <div id="innerv3" class="innervoice"></div>
                 </div>
             </div>
             <div id="infospace" class="flex-container">
