--- a/main_door.html
+++ b/main_door.html
@@ -11,7 +11,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/main_door.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -55,13 +55,12 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Lecture Up
+                            Main door
                         </div>
                         <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
-                         the main lights off, it is hard to see properly but the stairs to your <a class='activateBtn' data-target='E' href='#'>east</a> go 
-                         <a class='activateBtn' data-target='UP' href='#'>up</a> and <a class='activateBtn' data-target='DOWN' href='#'>down</a>.  There are dark rows of seating all around
-                           and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
+                            I quiet but persistant "loading" noise can be heard coming from the door to your <a class='activateBtn' data-target='W' href='#'>west</a>.
+                              The lecture stage is back the way you came to the <a class='activateBtn' data-target='E' href='#'>east</a>.
+                              To the <a class='activateBtn' data-target='N' href='#'>north</a> there is a light switch.
                         </div>
                     </div> 
                     <div class="inventory">
