--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         localStorage.setItem("gametime", "13:10");
         localStorage.setItem("inventory", "{'slot1':'empty', 'slot2':'empty', 'slot3':'empty'}");
         localStorage.setItem("lastthought", "empty");
+        localStorage.setItem("innervoice1", "What the hell is going on.");
+        localStorage.setItem("innervoice2", "Where is my bag too?");
+        localStorage.setItem("innervoice3", "I am so stuffed explaining this.");
     </script>
     <style>
         body, html{
