--- a/lecturestage.html
+++ b/lecturestage.html
@@ -57,8 +57,8 @@
                             Lecture Stage
                         </div>
                         <div class="descriptive" id="description">
-                            You are standing on the main stage of the sizesable lecture theatre.  To your <a class='activateBtn' data-target='W' href='#'>west</a> is a door.  
-                            To your <a class='activateBtn' data-target='E' href='#'>east</a> is the lecturn, shrowded in darkness.
+                            You are standing in the dark on the main stage of the sizesable lecture theatre.  To your <a class='activateBtn' data-target='W' href='#'>west</a> is a door.  
+                            To your <a class='activateBtn' data-target='E' href='#'>east</a> is the lecturn, shrowded in shadows.
                             <a class='activateBtn' data-target='N' href='#'>North</a> is a table filled with lost property.  To the <a class='activateBtn' data-target='S' href='#'>south</a> are the stairs leading to the seats.
                         </div>
                     </div> 
