--- a/light_switch.html
+++ b/light_switch.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             You wonder if a simple light switch could be the answer to your fears.
-                            Make you choice time - <a class='activateBtn' data-target='USE' href='#'>Use</a> the switch or retreat <a class='activateBtn' data-target='USE' href='#'>south</a> and live in fear.
+                            Make you choice time - <a class='activateBtn' data-target='USE' href='#'>Use</a> the switch or retreat <a class='activateBtn' data-target='S' href='#'>south</a> and live in fear.
                         </div>
                     </div> 
                     <div class="inventory">
