--- a/light_switch.html
+++ b/light_switch.html
@@ -57,8 +57,8 @@
                             Light switch
                         </div>
                         <div class="descriptive" id="description">
-                            You wonder if a simple light switch could be the answer to your fears.
-                            Make you choice time - <a class='activateBtn' data-target='USE' href='#'>Use</a> the switch or retreat <a class='activateBtn' data-target='S' href='#'>south</a> and live in fear.
+                            You wonder if a simple light switch could be the answer to your dark fears.
+                            Make you choice time - <a class='activateBtn' data-target='USE' href='#'>use</a> the switch or retreat <a class='activateBtn' data-target='S' href='#'>south</a> and live in fear?
                         </div>
                     </div> 
                     <div class="inventory">
