--- a/lost_property.html
+++ b/lost_property.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lecturn.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/lost_property.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -54,11 +54,11 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Lecturn
+                            Lost property
                         </div>
                         <div class="descriptive" id="description">
-                            A laptop sits here, locked with a password prompt.  This area seems quite dusty and unused but there is
-                            a well worn path in the carpet which leads back <a class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
+                            A table full of useful stuff!  If only I had an inventory system and could carry some of this around.  
+                            I'm sure I could use it to get out of here.  To your <a class='activateBtn' data-target='S' href='#'>south</a> is the main stage.
                         </div>
                     </div> 
                     <div class="inventory">
