--- a/stairs_8_lit.html
+++ b/stairs_8_lit.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lecturn.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/stairs_8_lit.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -54,11 +54,11 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Lecturn
+                            Stairs 8
                         </div>
                         <div class="descriptive" id="description">
-                            A laptop sits here, locked with a password prompt.  This area seems quite dusty and unused but there is
-                            a well worn path in the carpet which leads back <a class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
+                            With the lights on these stairs are far more manageable.  Further <a class='activateBtn' data-target='UP' href='#'>up</a> leads to the back
+                            of the lecture theatre, where all the creepy things hang out.  <a class='activateBtn' data-target='DOWN' href='#'>Down</a> returns you to the main stage.
                         </div>
                     </div> 
                     <div class="inventory">
