--- a/maze_h.html
+++ b/maze_h.html
@@ -57,13 +57,9 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a class='activateBtn' data-target='N' href='#'>north</a>
-                            <a class='activateBtn' data-target='E' href='#'>east</a>
-                            <a class='activateBtn' data-target='S' href='#'>south</a>
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            Pulling yourself up into the duct your body blocks what little light there is coming in from the hatch <a class='activateBtn' data-target='DOWN' href='#'>down</a> below you.
+                            The only sensible way to go seems to be <a class='activateBtn' data-target='S' href='#'>south</a>.  Going <a class='activateBtn' data-target='N' href='#'>north</a> seems to lead to a big choppy fan.
+                            It is dark, very dark. You are scared again.
                         </div>
                     </div> 
                     <div class="inventory">
