--- a/maze_m.html
+++ b/maze_m.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/maze.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/riad.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -57,13 +57,9 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a class='activateBtn' data-target='N' href='#'>north</a>
-                            <a class='activateBtn' data-target='E' href='#'>east</a>
-                            <a class='activateBtn' data-target='S' href='#'>south</a>
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            Coming out of the darkness you are greated by a cool, shaded courtyard.  
+                            A fountain under the orange trees soothingly sprays water that cools the air. Perhaps you should forget uni and stay here for ever.
+                            Or you can return <a class='activateBtn' data-target='E' href='#'>east</a> and continue exploring the maze.         
                         </div>
                     </div> 
                     <div class="inventory">
