--- a/maze_d.html
+++ b/maze_d.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/maze.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/balloon.JPG" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -57,13 +57,9 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a class='activateBtn' data-target='N' href='#'>north</a>
-                            <a class='activateBtn' data-target='E' href='#'>east</a>
-                            <a class='activateBtn' data-target='S' href='#'>south</a>
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            Emerging from the dark you find yourself falling a short distance and hitting something hard.  It is so bright it takes you a few moments to adjust.
+                            When you do your second favourite fear kicks in.  You have somehow landed on the top of a hot air balloon, hundreds of feet off the ground.
+                            You can hang here as long as you can or let go and drop <a class='activateBtn' data-target='DOWN' href='#'>down</a> and see what happens.
                         </div>
                     </div> 
                     <div class="inventory">
