--- a/maze_q.html
+++ b/maze_q.html
@@ -57,13 +57,7 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a class='activateBtn' data-target='N' href='#'>north</a>
-                            <a class='activateBtn' data-target='E' href='#'>east</a>
-                            <a class='activateBtn' data-target='S' href='#'>south</a>
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            It is dark, to the <a class='activateBtn' data-target='N' href='#'>north</a> is a vague glimmer of light and there is the gentle tinckling of water coming from the <a class='activateBtn' data-target='W' href='#'>west</a>.
                         </div>
                     </div> 
                     <div class="inventory">
