--- a/landing.html
+++ b/landing.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             Your senses were not wrong!  The thing in the corner is moving towards you.  The clatter of seats and the oncoming rush of
-                            foul air and then unimaginable force, falling, falling into the dark a distant noise getting loader as everything goes black.
+                            foul air and then unimaginable force, falling, falling into the dark a distant noise getting louder as everything goes black.
                         </div>
                     </div> 
                     <div class="inventory">
