--- a/stairs_8_lit.html
+++ b/stairs_8_lit.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/maze.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/stairs_8_lit.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -54,16 +54,11 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Maze
+                            Stairs 8
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a class='activateBtn' data-target='N' href='#'>north</a>
-                            <a class='activateBtn' data-target='E' href='#'>east</a>
-                            <a class='activateBtn' data-target='S' href='#'>south</a>
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            The stairs are more manageable with the lights on. Looking <a class='activateBtn' data-target='DOWN' href='#'>down</a> you can see the lecture theatre 
+                            and seating.  The light has banished the dark shadows from the back rows.  Continuing <a class='activateBtn' data-target='UP' href='#'>up</a> will take you to the back exit.
                         </div>
                     </div> 
                     <div class="inventory">
