maze pages added

--- a/awake.html
+++ b/awake.html
@@ -11,7 +11,7 @@
     <div class="fadefromblack"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/awake.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div id="mtitle" class="mtitle" style="display: none;">Lecture seats</div>
