--- a/duct.html
+++ b/duct.html
@@ -57,9 +57,7 @@
                             Landing
                         </div>
                         <div class="descriptive" id="description">
-                            At the top of the stairs there is a small landing area with an empty table.  Above you 
-                            the air conditioning <a class='activateBtn' data-target='UP' href='#'>ducts</a> fan out over the room.  To the <a class='activateBtn' data-target='W' href='#'>west</a> there is a door.
-                              The stairs lead back <a class='activateBtn' data-target='DOWN' href='#'>down</a>.  
+                            Above you the air conditioning <a class='activateBtn' data-target='UP' href='#'>ducts</a> fan out over the room.  To the <a class='activateBtn' data-target='W' href='#'>west</a> is the landing at the top of the stairs.  
                         </div>
                     </div> 
                     <div class="inventory">
