--- a/landing_lit.html
+++ b/landing_lit.html
@@ -2,6 +2,7 @@
 <html class="a-fullscreen">
   <head>
     <title>deadLINE</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
@@ -10,7 +11,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/maze.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
@@ -54,11 +55,12 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Maze
+                            Landing
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, to the <a class='activateBtn' data-target='N' href='#'>north</a> is a vague glimmer of light and there is the gentle tinkling sound of running water coming from the <a class='activateBtn' data-target='W' href='#'>west</a>.
-                            It feels like the passage continues to the <a class='activateBtn' data-target='S' href='#'>south</a>.
+                            You feel rather proud of yourself for facing your fears.  To the <a class='activateBtn' data-target='W' href='#'>west</a> there is the upper exit door.
+                            To the <a class='activateBtn' data-target='E' href='#'>east</a> is the back row and the low overhead ducts. 
+                            Behind you the stairs would return you <a class='activateBtn' data-target='DOWN' href='#'>down</a> into the main body of the lecture theatre.
                         </div>
                     </div> 
                     <div class="inventory">
