--- a/maze_j.html
+++ b/maze_j.html
@@ -57,8 +57,11 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, to the <a class='activateBtn' data-target='N' href='#'>north</a> is a vague glimmer of light and there is the gentle tinkling sound of running water coming from the <a class='activateBtn' data-target='W' href='#'>west</a>.
-                            It feels like the passage continues to the <a class='activateBtn' data-target='S' href='#'>south</a>.
+                            Despite the dark - from the sound you can detect it is more open.  Feeling around you realise there are passages 
+                            <a class='activateBtn' data-target='N' href='#'>north</a>,
+                            <a class='activateBtn' data-target='E' href='#'>east</a>, 
+                            <a class='activateBtn' data-target='S' href='#'>south</a> and 
+                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
                         </div>
                     </div> 
                     <div class="inventory">
