--- a/maze_s.html
+++ b/maze_s.html
@@ -57,8 +57,8 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, to the <a class='activateBtn' data-target='N' href='#'>north</a> is a vague glimmer of light and there is the gentle tinkling sound of running water coming from the <a class='activateBtn' data-target='W' href='#'>west</a>.
-                            It feels like the passage continues to the <a class='activateBtn' data-target='S' href='#'>south</a>.
+                            The dark is pushed aside by a rushing foul smell and crushing downwards force.  
+                            Then the crude gurgle of a grue laugh fades and is replaced by a distant sound to the <a class='activateBtn' data-target='E' href='#'>east</a>.
                         </div>
                     </div> 
                     <div class="inventory">
