--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>deadLINE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="360style.css">
     <!--
   "gametime":"13:10"
