--- a/landing.html
+++ b/landing.html
@@ -14,6 +14,7 @@
             <a-sky src="./images/landing.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
+                <div id="mtitle" class="mtitle"></div>
                 <div class="menu">        
                     <div class="barburger" style="display: none;">
                         <div class="bar1"></div>
