--- a/duct.html
+++ b/duct.html
@@ -2,6 +2,7 @@
 <html class="a-fullscreen">
   <head>
     <title>deadLINE</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
@@ -13,6 +14,7 @@
             <a-sky src="./images/duct.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div class="time">13:10</div>
+                <div id="mtitle" class="mtitle"></div>
                 <div class="menu">        
                     <div class="barburger" style="display: none;">
                         <div class="bar1"></div>
