--- a/landing.html
+++ b/landing.html
@@ -16,7 +16,7 @@
                 <div class="time">13:10</div>
                 <div id="mtitle" class="mtitle"></div>
                 <div class="menu">        
-                    <div class="barburger" style="display: none;">
+                    <div id="burger" class="barburger" style="display: none;">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             Your senses were not wrong!  The thing in the corner is moving towards you.  The clatter of seats and the oncoming rush of
-                            foul air and then unimaginable force, falling, falling into the dark a distant noise getting louder as everything goes black.
+                            foul air and then unimaginable force, falling, falling into the dark.  A distant noise grows louder as everything goes black.
                         </div>
                     </div> 
                     <div class="inventory">
