--- a/maze_s.html
+++ b/maze_s.html
@@ -15,7 +15,7 @@
                 <div class="time">13:10</div>
                 <div id="mtitle" class="mtitle"></div>
                 <div class="menu">        
-                    <div class="barburger" style="display: none;">
+                    <div id="burger" class="barburger" style="display: none;">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
