--- a/awake.html
+++ b/awake.html
@@ -60,7 +60,7 @@
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  
+                            Opening your eyes you find yourself lying on the floor of a dimly lit lecture theatre.  
                             You have no idea what time it is or how long you have remaining to submit your coursework. 
                             Go back to <a href='index.html'>sleep</a> or get <a class='activateBtn' data-target='UP' href='#'>up</a>
                         </div>
