--- a/lectureUp.html
+++ b/lectureUp.html
@@ -59,8 +59,7 @@
                             Lecture Up
                         </div>
                         <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
-                         the main lights off, it is hard to see properly but the stairs to your <a class='activateBtn' data-target='E' href='#'>east</a> go 
+                            Standing in the semi dark, the main lights off, it is hard to see properly but the stairs to your <a class='activateBtn' data-target='E' href='#'>east</a> go 
                          <a class='activateBtn' data-target='UP' href='#'>up</a> and <a class='activateBtn' data-target='DOWN' href='#'>down</a>.  There are dark rows of seating all around
                            and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
                         </div>
